# connect4_ai

./: CMakeLists.txt  README.md  connect4.cpp
agent/: agent.h  mcts.h
board/: board.h
common/: constant.h  utils.h
docs/: ucb1.txt
